kubernetes/applications/media/deluge-vpn-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deluge-vpn-egress-lockdown
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: deluge-vpn
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # linuxserver/wireguard applies the DNS servers from wg0.conf to the shared pod namespace.
    - toCIDRSet:
        - cidr: 98.128.186.86/32
        - cidr: 155.4.89.136/32
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toFQDNs:
        - matchName: wireguard.5july.net
      toPorts:
        - ports:
            - port: "48575"
              protocol: UDP
    - toCIDRSet:
        - cidr: 98.128.186.116/32
      toPorts:
        - ports:
            - port: "48575"
              protocol: UDP
